<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.investiment_portfolio.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_portfolio"
        android:name="com.example.investiment_portfolio.ui.portfolio.PortfolioFragment"
        android:label="@string/title_portfolio"
        tools:layout="@layout/fragment_portfolio" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.investiment_portfolio.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>