<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.portfolio.PortfolioFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:text="@string/net"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/MyTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingStart="10dp"
            android:text="@string/money"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.52">
                <!-- A CardView that contains a TextView -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="0dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingTop="5dp"
                            android:text="@string/day"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:visibility="visible" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingTop="24dp"
                            android:text="@string/day_value"
                            android:textColor="@color/green"
                            android:textSize="12sp"
                            android:visibility="visible" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingTop="40dp"
                            android:text="@string/day_percentage"
                            android:textColor="@color/green"
                            android:textSize="12sp"
                            android:visibility="visible" />
                </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.52">
                <!-- A CardView that contains a TextView -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="0dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingTop="5dp"
                            android:text="@string/gain"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:visibility="visible" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingTop="24dp"
                            android:text="@string/gain_value"
                            android:textColor="@color/red"
                            android:textSize="12sp"
                            android:visibility="visible" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingTop="40dp"
                            android:text="@string/gain_percentage"
                            android:textColor="@color/red"
                            android:textSize="12sp"
                            android:visibility="visible" />
                </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_marginStart="210dp"
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.52">
                <!-- A CardView that contains a TextView -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="0dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingTop="5dp"
                            android:text="@string/cash"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:visibility="visible" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingTop="24dp"
                            android:text="@string/cash_value"
                            android:textColor="@color/green"
                            android:textSize="12sp"
                            android:visibility="visible" />
                </androidx.cardview.widget.CardView>
        </LinearLayout>

        <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="200dp"
                android:scrollbars="none"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableLayout
                    android:id="@+id/tableLayoutProduct"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    ></TableLayout>

        </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>